# workua-test-task

./: LICENSE  README.md  pyproject.toml
src/: __main__.py  first_task.py  second_task.py
